set-up husky and dev docs

--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 body {
   margin: 0;
   background-color: #f8f8ff;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 button,
 input,
 select,
 option {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
